force-app/main/default/objects/AssetLiability__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>