force-app/main/default/objects/AssetLiability__c/fields/Property_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Line_2__c</fullName>
    <label>Property Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>