force-app/main/default/objects/AssetLiability__c/fields/Property_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Line_3__c</fullName>
    <label>Property Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>