force-app/main/default/objects/AssetLiability__c/fields/Property_Listed_On_Deed__c.field-meta.xml
<CustomField>
    <fullName>Property_Listed_On_Deed__c</fullName>
    <label>Property Listed On Deed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>