force-app/main/default/objects/AssetLiability__c/fields/PSBonds_Holder_Number__c.field-meta.xml
<CustomField>
    <fullName>PSBonds_Holder_Number__c</fullName>
    <label>PSBonds Holder Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>