force-app/main/default/objects/AssetLiability__c/fields/Received_Amount_for_Policy__c.field-meta.xml
<CustomField>
    <fullName>Received_Amount_for_Policy__c</fullName>
    <label>Received Amount for Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>