force-app/main/default/objects/AssetLiability__c/fields/Reference_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>Reference_for_Rent__c</fullName>
    <label>Reference for Rent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>