force-app/main/default/objects/AssetLiability__c/fields/Registrar_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Address_Line_3__c</fullName>
    <label>Registrar Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>