force-app/main/default/objects/AssetLiability__c/fields/Registrar_of_Stocks_Shares_Held__c.field-meta.xml
<CustomField>
    <fullName>Registrar_of_Stocks_Shares_Held__c</fullName>
    <label>Registrar of Stocks/Shares Held</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>