force-app/main/default/objects/AssetLiability__c/fields/Registrar_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Registrar_Telephone_Number__c</fullName>
    <label>Registrar Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>