force-app/main/default/objects/AssetLiability__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <label>Rent Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>