force-app/main/default/objects/AssetLiability__c/fields/Rent_Paid_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Rent_Paid_Up_To__c</fullName>
    <label>Rent Paid Up To</label>
    <type>Date</type>
</CustomField>