force-app/main/default/objects/AssetLiability__c/fields/Rental_Agreement_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement_Terminated__c</fullName>
    <label>Rental Agreement Terminated</label>
    <type>Date</type>
</CustomField>