force-app/main/default/objects/AssetLiability__c/fields/Savings_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Savings_Account_Number__c</fullName>
    <label>Savings Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>