force-app/main/default/objects/AssetLiability__c/fields/Savings_Value__c.field-meta.xml
<CustomField>
    <fullName>Savings_Value__c</fullName>
    <label>Savings Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>