force-app/main/default/objects/AssetLiability__c/fields/Schedule_Note_Selection__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Note_Selection__c</fullName>
    <label>Schedule Note Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>