force-app/main/default/objects/AssetLiability__c/fields/Shares_Stocks_Sold__c.field-meta.xml
<CustomField>
    <fullName>Shares_Stocks_Sold__c</fullName>
    <label>Shares/Stocks Sold?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>