force-app/main/default/objects/AssetLiability__c/fields/Stockbroker_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Address_Line_2__c</fullName>
    <label>Stockbroker Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>