force-app/main/default/objects/AssetLiability__c/fields/Stockbroker_Fax__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Fax__c</fullName>
    <label>Stockbroker Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>