force-app/main/default/objects/AssetLiability__c/fields/Stockbroker_Reference__c.field-meta.xml
<CustomField>
    <fullName>Stockbroker_Reference__c</fullName>
    <label>Stockbroker Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>