force-app/main/default/objects/AssetLiability__c/fields/Tax_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Office_Address_Line_1__c</fullName>
    <label>Tax Office Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>