force-app/main/default/objects/AssetLiability__c/fields/Tax_Office_for_Inland_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Tax_Office_for_Inland_Revenue__c</fullName>
    <label>Tax Office for Inland Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>