force-app/main/default/objects/AssetLiability__c/fields/Tax_Office_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Office_Telephone_Number__c</fullName>
    <label>Tax Office Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>