force-app/main/default/objects/AssetLiability__c/fields/Tenant_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Address_Line_3__c</fullName>
    <label>Tenant Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>