force-app/main/default/objects/AssetLiability__c/fields/Tenant_Forenames__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Forenames__c</fullName>
    <label>Tenant Forenames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>