force-app/main/default/objects/AssetLiability__c/fields/Tenant_Surname_Co_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Surname_Co_Name__c</fullName>
    <label>Tenant Surname/Co Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>