force-app/main/default/objects/AssetLiability__c/fields/Undertaker_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Undertaker_Address_Line_4__c</fullName>
    <label>Undertaker Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>