force-app/main/default/objects/AssetLiability__c/fields/Undertaker_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Undertaker_Telephone__c</fullName>
    <label>Undertaker Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>