force-app/main/default/objects/AssetLiability__c/fields/Utility_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Number__c</fullName>
    <label>Utility Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>