force-app/main/default/objects/AssetLiability__c/fields/Utility_Company_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Utility_Company_Address_Line_2__c</fullName>
    <label>Utility Company Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>