force-app/main/default/objects/AssetLiability__c/fields/Valuables_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Valuables_Schedule_Date__c</fullName>
    <label>Valuables Schedule Date</label>
    <type>Date</type>
</CustomField>