force-app/main/default/objects/AssetLiability__c/fields/Valuation_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Valuation_of_Property__c</fullName>
    <label>Valuation of Property</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>