force-app/main/default/objects/AssetLiability__c/fields/Value_of_Certificates__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Certificates__c</fullName>
    <label>Value of Certificates</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>