force-app/main/default/objects/AssetLiability__c/fields/Value_of_Other_Assets_Probate__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Other_Assets_Probate__c</fullName>
    <label>Value of Other Assets (Probate)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>