force-app/main/default/objects/AssetLiability__c/fields/Vehicle_Auctioneer_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Auctioneer_Fax_Number__c</fullName>
    <label>Vehicle Auctioneer Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>