force-app/main/default/objects/AssetLiability__c/fields/Vehicle_Auctioneer_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Auctioneer_Postcode__c</fullName>
    <label>Vehicle Auctioneer Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>