force-app/main/default/objects/AssetLiability__c/fields/Vehicle_Auctioneer_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Auctioneer_Telephone__c</fullName>
    <label>Vehicle Auctioneer Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>