force-app/main/default/objects/AssetLiability__c/fields/Waiting_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period__c</fullName>
    <label>Waiting Period</label>
    <type>Date</type>
</CustomField>