force-app/main/default/objects/AssetLiability__c/recordTypes/Employment.recordType-meta.xml
<RecordType>
    <fullName>Employment</fullName>
    <active>true</active>
    <label>Employment</label>
</RecordType>