force-app/main/default/objects/AssetLiability__c/recordTypes/Funeral_Expenses.recordType-meta.xml
<RecordType>
    <fullName>Funeral_Expenses</fullName>
    <active>true</active>
    <label>Funeral Expenses</label>
</RecordType>