force-app/main/default/objects/AssetLiability__c/recordTypes/Inland_Revenue.recordType-meta.xml
<RecordType>
    <fullName>Inland_Revenue</fullName>
    <active>true</active>
    <label>Inland Revenue</label>
</RecordType>