force-app/main/default/objects/AssetLiability__c/recordTypes/Lease.recordType-meta.xml
<RecordType>
    <fullName>Lease</fullName>
    <active>true</active>
    <label>Lease</label>
</RecordType>