force-app/main/default/objects/AssetLiability__c/recordTypes/Mortgages.recordType-meta.xml
<RecordType>
    <fullName>Mortgages</fullName>
    <active>true</active>
    <label>Mortgages</label>
</RecordType>