force-app/main/default/objects/AssetLiability__c/recordTypes/National_Savings.recordType-meta.xml
<RecordType>
    <fullName>National_Savings</fullName>
    <active>true</active>
    <label>National Savings</label>
</RecordType>