force-app/main/default/objects/AssetLiability__c/recordTypes/Nursing_home_fees.recordType-meta.xml
<RecordType>
    <fullName>Nursing_home_fees</fullName>
    <active>true</active>
    <label>Nursing home fees</label>
</RecordType>