force-app/main/default/objects/AssetLiability__c/recordTypes/Other_Creditors.recordType-meta.xml
<RecordType>
    <fullName>Other_Creditors</fullName>
    <active>true</active>
    <label>Other Creditors</label>
</RecordType>