force-app/main/default/objects/AssetLiability__c/recordTypes/Pensions.recordType-meta.xml
<RecordType>
    <fullName>Pensions</fullName>
    <active>true</active>
    <label>Pensions</label>
</RecordType>