force-app/main/default/objects/AssetLiability__c/recordTypes/Property_Details.recordType-meta.xml
<RecordType>
    <fullName>Property_Details</fullName>
    <active>true</active>
    <label>Property Details</label>
</RecordType>