force-app/main/default/objects/AssetLiability__c/recordTypes/Stocks_Shares.recordType-meta.xml
<RecordType>
    <fullName>Stocks_Shares</fullName>
    <active>true</active>
    <label>Stocks/Shares</label>
</RecordType>