force-app/main/default/objects/AssetLiability__c/recordTypes/Unit_Trusts_PEPs.recordType-meta.xml
<RecordType>
    <fullName>Unit_Trusts_PEPs</fullName>
    <active>true</active>
    <label>Unit Trusts/PEPs</label>
</RecordType>