force-app/main/default/objects/AssetLiability__c/recordTypes/Utilities_Services.recordType-meta.xml
<RecordType>
    <fullName>Utilities_Services</fullName>
    <active>true</active>
    <label>Utilities/Services</label>
</RecordType>